# itsalamp

./: CMakeLists  CMakeLists.txt  Makefile  README.md
include/: color.h  config.h  debug.h  image.h  magic.h  parse.h
src/: color.c  config.c  countdown.c  image.c  main  main.c  parse.c
tests/: test.sh  test0  wallclock-test
tools/: cpumon  itsalarm  memon  monnet  pacdate
